--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,4 +1,16 @@
-Content demo<br/>
-<video height="270" width="480" autoplay>
-  <source src="test" type="video/webm">
-</video>
+<html>
+<head>
+<title>Kurento Content Demo</title>
+</head>
+<body>
+	<h1>Kurento Content Demo</h1>
+	This demo contains the following examples:
+	<ul>
+		<li><a href="player-with-tunnel.html">Player with tunnel</a></li>
+		<li><a href="player-with-redirect.html">Player with redirect</a></li>
+		<li><a href="recorder-with-tunnel.html">Recorder with tunnel</a></li>
+		<li><a href="recorder-with-redirect.html">Recorder with redirect</a></li>
+		<li><a href="example">WebRTC Example</a></li>
+	</ul>
+</body>
+</html>
