--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="kwsMedia.js"></script>
+    <script src="../dist/KwsMedia.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
