--- a/src/main/webapp/player.html
+++ b/src/main/webapp/player.html
@@ -9,7 +9,7 @@
 	<table style="border-spacing: 10px;">
 		<tr>
 			<td valign="top"><button id="play" onclick="play();">Play</button>
-				<select id="url" name="url">
+				<select id="handler">
 					<option value="playerHttp/webm">WEBM video</option>
 					<option value="playerHttp/mov">MOV video</option>
 					<option value="playerHttp/mkv">MKV video</option>
@@ -18,14 +18,13 @@
 					<option value="playerHttp/mp4">MP4 video</option>
 					<option value="playerHttpJackVader">JackVader Filter</option>
 			</select></td>
-			<td><video id="video" autoplay></video></td>
+			<td><video id="video" autoplay controls width="640px"
+					height="360px"></video></td>
 		</tr>
 	</table>
 
 	<script type="text/javascript">
 		var video = document.getElementById("video");
-		var myUrl = document.URL;
-		var myPath = myUrl.substring(0, myUrl.lastIndexOf("/") + 1);
 
 		video.addEventListener('ended', videoEnd, false);
 	    function videoEnd(e) {
@@ -34,8 +33,9 @@
 	    }
 
 	    function play() {
-			var url = document.getElementById("url");
-			video.src = myPath + url.value;
+			video.poster = "img/transparent-1px.png";
+			video.style.background = "center transparent url('img/spinner.gif') no-repeat";
+			video.src = document.getElementById("handler").value;
 			video.play();
 			document.getElementById("play").disabled = true;
 	    }
