Repository demos involving media server
Change-Id: I7f619c8bb579955b0ddfe00c5a3fb65853814816

--- a/src/main/webapp/player/player.html
+++ b/src/main/webapp/player/player.html
@@ -67,11 +67,20 @@
 						Player of a recorded content (JSON and redirect)</option>
 					<option value="../playerWebRtc">HTTP Player of a WebRTC
 						recorded content</option>
-					<option value="../playerRecorderRepository/idRecorderRepository">HTTP
-						Player of a recorded content in repository</option>
-					<option
-						value="../playerRecorderRepository/idRecorderJsonRepository">HTTP
-						Player of a recorded content (with JSON) in repository</option>
+					<option value="../playerRepository/itemTunnel">HTTP Player
+						of a recorded content (using tunnel strategy) in repository</option>
+					<option value="../playerRepository/itemRedirect">HTTP
+						Player of a recorded content (using redirect strategy) in
+						repository</option>
+					<option value="../playerJackVaderRepository/itemTunnel">HTTP
+						Player with JackVaderFilter of a recorded content (using tunnel
+						strategy) in repository</option>
+					<option value="../playerJackVaderRepository/itemRedirect">HTTP
+						Player with JackVaderFilter of a recorded content (using redirect
+						strategy) in repository</option>
+					<option value="../playerRepository/itemJackVader">HTTP
+						Player of a recorded content previously filtered with
+						JackVaderFilter</option>
 			</select></td>
 		</tr>
 		<tr>
