--- a/src/main/webapp/recorder/recorder.html
+++ b/src/main/webapp/recorder/recorder.html
@@ -16,7 +16,12 @@
 		<label for="handler">Handler</label> <select id="handler">
 			<option value="../recorderTunnel">Recorder with tunnel</option>
 			<option value="../recorderRedirect">Recorder with redirect</option>
-			<option value="../recorderRepository">Recorder to repository</option>
+			<option value="../recorderTunnelRepository">Recorder to
+				repository with tunnel</option>
+			<option value="../recorderRedirectRepository">Recorder to
+				repository with redirect</option>
+			<option value="../recorderJackVaderRepository">Recorder to
+				repository with JackVader Filter</option>
 		</select><br /> <input type="file" id="myfile" name="myfile" /><br /> <input
 			type="button" onclick="upload()" value="Record" />
 	</form>
