Improved Campus Party 2014 demo
Change-Id: I4741206416245d9d01773b5b30b95065241a9b69

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,8 @@
 		<li><a href="recorder/recorderJson.html">HTTP Recorder with
 				JSON protocol</a></li>
 		<li><a href="webrtc/webrtc.html">WebRTC</a></li>
-		<li><a href="brasil_demo/index.html">Campus Party 2014 Brasil</a></li>
+		<li><a href="webrtc/chat.html">WebRTC one to many</a></li>
+		<li><a href="brazil_demo/index.html">Campus Party 2014 Brazil</a></li>
 	</ul>
 	<div style="width: 500px;">
 		<sup>*</sup> The JSON protocol enhances a HTTP Player by implementing
