--- a/src/main/webapp/london_demo/demo.html
+++ b/src/main/webapp/london_demo/demo.html
@@ -10,6 +10,7 @@
 
     <script src="../js/kws-content-api.min.js"></script>
 
+	<script src="lib/jquery-2.0.3.min.js"></script>
     <script src="lib/jquery.scrollTo.min.js"></script>
 
     <script src="../lib/Console.js"></script>
