--- a/src/main/webapp/player/player.html
+++ b/src/main/webapp/player/player.html
@@ -81,6 +81,8 @@
 					<option value="../playerRepository/itemJackVader">HTTP
 						Player of a recorded content previously filtered with
 						JackVaderFilter</option>
+					<option value="../cpbPlayer">HTTP Player of a recorded
+						content in Brazil Demo</option>
 			</select></td>
 		</tr>
 		<tr>
