--- a/src/main/webapp/brazil_demo/index.html
+++ b/src/main/webapp/brazil_demo/index.html
@@ -2,24 +2,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Kurento demo - Campus Party 2014 Brasil</title>
+<title>Kurento demo - Campus Party 2014 Brazil</title>
 <script src="../js/kws-content-api.js"></script>
 <script src="../lib/adapter.js"></script>
 <script>
 	// KwsWebRtcContent connection 
 	var conn;
-
+	
 	function start() {
 		// Disable start button
 		document.getElementById("start").disabled = true;
-	
+
 		// Show spinners
 		var remoteVideo = document.getElementById("remoteVideo");
 		remoteVideo.poster = "../img/transparent-1px.png";
 		remoteVideo.style.background = "center transparent url('../img/spinner.gif') no-repeat";
-	
+
+		// Fullscreen
+		//if (remoteVideo.requestFullscreen) {
+		//	remoteVideo.requestFullscreen();
+		//} else if (remoteVideo.mozRequestFullScreen) {
+		//	remoteVideo.mozRequestFullScreen();
+		//} else if (remoteVideo.webkitRequestFullscreen) {
+		//	remoteVideo.webkitRequestFullscreen();
+		//}
+
 		// Create a new connection
-		var handler = "../webRtcPointerDetectorLoopbackCPB";
+		var handler = "../cpbWebRtc";
 		var options = {
 			remoteVideoTag: "remoteVideo"
 		};
@@ -28,7 +37,7 @@
 			conn = new kwsContentApi.KwsWebRtcContent(handler, options);
 			// Enable the terminate button
 			document.getElementById("terminate").disabled = false;
-		
+			
 			// Set connection success and error events
 			conn.on("start", function(event) {
 				// Enable terminate button
@@ -36,7 +45,7 @@
 			});
 			conn.on("error", function(error) {
 				// Enable connect button
-				document.getElementById("start").disabled = false;
+				document.getElementById("start").disabled = false
 			});
 		}
 		catch(error) {
@@ -59,7 +68,7 @@
 </script>
 </head>
 <body>
-	<h1>Campus Party 2014 Brasil</h1>
+	<h1>Campus Party 2014 Brazil</h1>
 	<button id="start" onclick="start();">Start</button>
 	<button id="terminate" disabled onclick="terminate();">Terminate</button>
 	<br />
