Added Chroma Filter and cleaning up London demo
Change-Id: I424537a50df074f63e5839252ca142eb403dec7b

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,8 +14,10 @@
 		<li><a href="recorder/recorderJson.html">HTTP Recorder with
 				JSON protocol</a></li>
 		<li><a href="webrtc/webrtc.html">WebRTC</a></li>
-		<li><a href="webrtc/chat.html">WebRTC one to many</a></li>
-		<li><a href="brazil_demo/index.html">Campus Party 2014 Brazil</a></li>
+		<li><a href="london_demo/demo.html">Campus Party 2013 London
+				Demo</a></li>
+		<li><a href="brazil_demo/index.html">Campus Party 2014 Brazil
+				Demo</a></li>
 	</ul>
 	<div style="width: 500px;">
 		<sup>*</sup> The JSON protocol enhances a HTTP Player by implementing
