--- a/src/main/webapp/brazil_demo/index.html
+++ b/src/main/webapp/brazil_demo/index.html
@@ -18,23 +18,17 @@
 		remoteVideo.poster = "../img/transparent-1px.png";
 		remoteVideo.style.background = "center transparent url('../img/spinner.gif') no-repeat";
 
-		// Fullscreen
-		//if (remoteVideo.requestFullscreen) {
-		//	remoteVideo.requestFullscreen();
-		//} else if (remoteVideo.mozRequestFullScreen) {
-		//	remoteVideo.mozRequestFullScreen();
-		//} else if (remoteVideo.webkitRequestFullscreen) {
-		//	remoteVideo.webkitRequestFullscreen();
-		//}
-
 		// Create a new connection
 		var handler = "../cpbWebRtc";
+		var contentId = document.getElementById("contentId").disabled ? "" : "/" + document.getElementById("contentId").value;
+		var endpoint = handler + contentId;
+
 		var options = {
 			remoteVideoTag: "remoteVideo"
 		};
 	
 		try {
-			conn = new kwsContentApi.KwsWebRtcContent(handler, options);
+			conn = new kwsContentApi.KwsWebRtcContent(endpoint, options);
 			// Enable the terminate button
 			document.getElementById("terminate").disabled = false;
 			
@@ -69,6 +63,10 @@
 </head>
 <body>
 	<h1>Campus Party 2014 Brazil</h1>
+	<select id="contentId">
+		<option value="mediaServerRecorder">Record on Media Server</option>
+		<option value="repositoryRecorder">Record on Repository</option>
+	</select>
 	<button id="start" onclick="start();">Start</button>
 	<button id="terminate" disabled onclick="terminate();">Terminate</button>
 	<br />
