--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
 	<ul>
 		<li><a href="player.html">HTTP Player</a></li>
 		<li><a href="playerJson.html">HTTP Player with JSON protocol</a><sup>*</sup></li>
+		<li><a href="webrtc.html">WebRTC</a></li>
 	</ul>
 	<div style="width: 500px;">
 		<sup>*</sup> The JSON protocol enhances a HTTP Player by implementing
