One to many WebRTC demo
Change-Id: Ifb43c7b9098d200882d0f25d5b8f31bd519e7d40

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,24 +8,25 @@
 	This demo contains the following examples:
 	<ul>
 		<li><a href="player/player.html">HTTP Player</a></li>
-		<li><a href="player/playerJson.html">HTTP Player with JSON
-				protocol</a></li>
+		<li><a href="player/playerJson.html">HTTP Player with
+				JSON-RPC protocol</a></li>
 		<li><a href="recorder/recorder.html">HTTP Recorder</a></li>
 		<li><a href="recorder/recorderJson.html">HTTP Recorder with
-				JSON protocol</a></li>
+				JSON-RPC protocol</a></li>
 		<li><a href="webrtc/webrtc.html">WebRTC</a></li>
+		<li><a href="webrtc/webrtc-one2many.html">WebRTC One to Many</a></li>
 		<li><a href="london_demo/demo.html">Campus Party 2013 London
 				Demo</a></li>
 		<li><a href="brazil_demo/index.html">Campus Party 2014 Brazil
 				Demo</a></li>
 	</ul>
 	<div style="width: 500px;">
-		<sup>*</sup> The JSON protocol enhances a HTTP Player by implementing
-		a signaling communication between the client (JavaScript API) and the
-		Kurento Application Server (KAS). Using this protocol the client will
-		be able to negotiate the transfer of media using SDP (Session
-		Description Protocol), and also it will be notified with media and
-		flow execution events.
+		<sup>*</sup> The JSON-RPC protocol enhances a HTTP Player by
+		implementing a signaling communication between the client (JavaScript
+		API) and the Kurento Application Server (KAS). Using this protocol the
+		client will be able to negotiate the transfer of media using SDP
+		(Session Description Protocol), and also it will be notified with
+		media and flow execution events.
 	</div>
 </body>
 </html>
