--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,15 +8,16 @@
 	This demo contains the following examples:
 	<ul>
 		<li><a href="player.html">HTTP Player</a></li>
-		<li><a href="playerJson.html">HTTP Player with JSON protocol</a><sup>*</sup></li>
+		<li><a href="playerJson.html">HTTP Player with JSON-RPC
+				protocol</a><sup>*</sup></li>
 	</ul>
 	<div style="width: 500px;">
-		<sup>*</sup> The JSON protocol enhances a HTTP Player by implementing
-		a signaling communication between the client (JavaScript API) and the
-		Kurento Application Server (KAS). Using this protocol the client will
-		be able to negotiate the transfer of media using SDP (Session
-		Description Protocol), and also it will be notified with media and
-		flow execution events.
+		<sup>*</sup> The JSON-RPC protocol enhances a HTTP Player by
+		implementing a signaling communication between the client (JavaScript
+		API) and the Kurento Application Server (KAS). Using this protocol the
+		client will be able to negotiate the transfer of media using SDP
+		(Session Description Protocol), and also it will be notified with
+		media and flow execution events.
 	</div>
 </body>
 </html>
