--- a/example/WebRtcEndPoint/index.html
+++ b/example/WebRtcEndPoint/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <script src="../dist/KwsMedia.js"></script>
+    <script src="../../dist/KwsMedia.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
+    <video id="videoInput" autoplay />
     <video id="videoOutput" autoplay />
   </body>
 </html>
