--- a/src/main/webapp/webrtc/webrtc-one2many.html
+++ b/src/main/webapp/webrtc/webrtc-one2many.html
@@ -91,8 +91,8 @@
 </head>
 <body>
 	<h1>WebRTC One to Many Demo</h1>
-	<p>Instructions: Connect different computers (with webcam) to this
-		URL and click on start.</p>
+	<p>Connect different computers (with webcam) to this URL and click
+		on start.</p>
 	<button id="start" onclick="start();">Start</button>
 	<button id="terminate" disabled onclick="terminate();">Terminate</button>
 	<br />
