--- a/src/main/webapp/webrtc/webrtc.html
+++ b/src/main/webapp/webrtc/webrtc.html
@@ -73,6 +73,7 @@
 		var contentId = document.getElementById("contentId").disabled ? "" : "/" + document.getElementById("contentId").value;
 		var endpoint = handler + contentId;
 		var options = {
+			iceServers: [],
 			localVideoTag: "localVideo",
 			remoteVideoTag: "remoteVideo"
 		};
