--- a/source/themes/kurento/layout.html
+++ b/source/themes/kurento/layout.html
@@ -9,7 +9,9 @@
     :license: LGPL, see LICENSE for details.
 #}
 {% extends "basic/layout.html" %}
-
+{% block extrahead %}
+<link href='http://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css' />
+{% endblock %}
 {% block header %}
     <div class="header-wrapper">
       <div class="header">
