Video conference demo (n to n) without MediaMixers
Change-Id: I00fc6bb58924fe4c041c1fbd90a399e44c824df2

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,7 +19,8 @@
 				Demo</a></li>
 		<li><a href="brazil_demo/index.html">Campus Party 2014 Brazil
 				Demo</a></li>
-		<!-- <li><a href="mixer/dispatcher.html">Dispatcher Mixer</a></li> -->
+		<!--<li><a href="mixer/dispatcher.html">Dispatcher Mixer</a></li>-->
+		<li><a href="webrtc/videochat.html">Video Chat</a></li>
 	</ul>
 	<div style="width: 500px;">
 		<sup>*</sup> The JSON-RPC protocol enhances a HTTP Player by
