selectable.html: move functions associated with commands to the top
Change-Id: Ifa773c1239ea693c95c3b090195af188156843a3

--- a/src/main/webapp/cebit/selectable.html
+++ b/src/main/webapp/cebit/selectable.html
@@ -28,6 +28,32 @@
 		participants.appendChild(opt);
 	}
 
+	/* Commands */
+	function getParticipants() {
+		conn.execute(Command.GET_PARTICIPANTS, "", function(error, result) {
+			console.log("error: " + error + ", result: " + result);
+
+			var participants = document.getElementById('participants');
+			while (participants.options.length > 0) {
+				participants.remove(0);
+			}
+
+			participantsList = JSON.parse(result);
+			console.log("participantsList: " + participantsList);
+			participantsList.forEach(function(item) {
+				addParticipant(item);
+			});
+		});
+	}
+
+	function secect() {
+		var partSelected = document.getElementById("participants").value;
+		console.log("Participant selected: " + partSelected);
+		conn.execute(Command.SELECT, partSelected, function(error, result) {
+			console.log("error: " + error + ", result: " + result);
+		});
+	}
+
 	var conn;
 
 	function terminate() {
@@ -101,31 +127,6 @@
 			document.getElementById("start").disabled = false;
 			console.error(error.message);
 		}
-	}
-
-	function getParticipants() {
-		conn.execute(Command.GET_PARTICIPANTS, "", function(error, result) {
-			console.log("error: " + error + ", result: " + result);
-
-			var participants = document.getElementById('participants');
-			while (participants.options.length > 0) {
-				participants.remove(0);
-			}
-
-			participantsList = JSON.parse(result);
-			console.log("participantsList: " + participantsList);
-			participantsList.forEach(function(item) {
-				addParticipant(item);
-			});
-		});
-	}
-
-	function secect() {
-		var partSelected = document.getElementById("participants").value;
-		console.log("Participant selected: " + partSelected);
-		conn.execute(Command.SELECT, partSelected, function(error, result) {
-			console.log("error: " + error + ", result: " + result);
-		});
 	}
 </script>
 </head>
