selectable.html: add onJoined function
Change-Id: Id31d04b719304a4dc59192c76b769b320bc0c038

--- a/src/main/webapp/cebit/selectable.html
+++ b/src/main/webapp/cebit/selectable.html
@@ -19,13 +19,17 @@
 		ON_JOINED : "onJoined",
 	}
 
-	/* Events */
 	function addParticipant(participant) {
 		var participants = document.getElementById('participants');
 		var opt = document.createElement('option');
 		opt.innerHTML = participant;
 		opt.value = participant;
 		participants.appendChild(opt);
+	}
+
+	/* Events */
+	function onJoined(participant) {
+		addParticipant(participant);
 	}
 
 	/* Commands */
@@ -91,7 +95,7 @@
 							+ ")");
 
 			if (Event.ON_JOINED == event.type) {
-				addParticipant(event.data);
+				onJoined(event.data);
 			}
 		});
 
