selectable.html: listen to onUnjoined event to remove entry from combo list
Change-Id: Ica6a184576ba8061ba8b31e6f775187a18b188ff

--- a/src/main/webapp/cebit/selectable.html
+++ b/src/main/webapp/cebit/selectable.html
@@ -17,6 +17,7 @@
 
 	var Event = {
 		ON_JOINED : "onJoined",
+		ON_UNJOINED : "onUnjoined",
 	}
 
 	function addParticipant(participant) {
@@ -27,9 +28,23 @@
 		participants.appendChild(opt);
 	}
 
+	function removeParticipant(participant) {
+		var participants = document.getElementById('participants');
+		for (i = 0; i < participants.length; i++) {
+			if (participants.options[i].text == participant) {
+				participants.remove(i);
+				break;
+			}
+		}
+	}
+
 	/* Events */
 	function onJoined(participant) {
 		addParticipant(participant);
+	}
+
+	function onUnjoined(participant) {
+		removeParticipant(participant);
 	}
 
 	/* Commands */
@@ -96,6 +111,8 @@
 
 			if (Event.ON_JOINED == event.type) {
 				onJoined(event.data);
+			} else if (Event.ON_UNJOINED == event.type) {
+				onUnjoined(event.data);
 			}
 		});
 
