selectable.html: manage onbeforeunload to terminate connection
Change-Id: Ia0b82517e53b7036ad8ba1641cd4d1b0830f8563

--- a/src/main/webapp/cebit/selectable.html
+++ b/src/main/webapp/cebit/selectable.html
@@ -73,9 +73,14 @@
 		});
 	}
 
-	var conn;
+	var conn = null;
 
 	function terminate() {
+		if (conn == null) {
+			console.log("Conn is not created");
+			return;
+		}
+
 		document.getElementById("terminate").disabled = true;
 
 		conn.terminate();
@@ -148,6 +153,11 @@
 			document.getElementById("start").disabled = false;
 			console.error(error.message);
 		}
+	}
+
+	window.onbeforeunload = function() {
+		terminate();
+		return "";
 	}
 </script>
 </head>
