--- a/source/themes/kurento/layout.html
+++ b/source/themes/kurento/layout.html
@@ -10,7 +10,7 @@
 #}
 {% extends "basic/layout.html" %}
 {% block extrahead %}
-<link href='http://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css' />
+<link href='//fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css' />
 {% endblock %}
 {% block header %}
     <div class="header-wrapper">
